--- a/index.html
+++ b/index.html
@@ -8,9 +8,32 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/style/style.css">
 
-    <title>Document</title>
+    <title>Taani Maama</title>
 </head>
 <body>
+
+    <main>
+        <aside id="navbar">
+
+        </aside>
+
+        <section id="welcome">
+
+        </section>
+
+        <section id="about-me" class="hide">
+
+        </section>
+
+        <section id="projects" class="hide">
+
+        </section>
+
+        <section id="credentials" class="hide">
+
+        </section>
+    </main>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/script/script.js"></script>
 </body>
