Made a lot of bootstrap style changes.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,31 @@
 </head>
 <body>
 
-    <main>
-        <aside id="navbar">
+    <header class="row col-5 my-3 pt-3 pl-5">
+        <h1>
+            Taani Maama
+        </h1>
+        <p class="lead">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span id="create">Create</span> }</p> 
+    </header>
 
-        </aside>
+    <main class="row">
+        <nav class="nav nav-tabs flex-column col-md-2 pl-2">
+            <a class="nav-link text-white" href="#welcome">Home</a>
+            <a class="nav-link text-white" href="#about-me">About Me</a>
+            <a class="nav-link text-white" href="#projects">Portfolio</a>
+            <a class="nav-link text-white" href="#credentials">Credentials</a>
+            <a class="nav-link text-white" href="#">Resume</a>
+          </nav>
 
-        <section id="welcome">
-
+        <section id="welcome" class="d-flex flex-column justify-content-center align-items-center text-center col-md-10">
+            <h3>Welcome to my page!</h3>
+            <p>Take your time and reach out to me at any of my socials.</p>
+            <div class="d-flex flex-row justify-content-around p-0">
+                <a><i class="fab fa-github pr-3"></i></a>
+                <a><i class="fab fa-facebook pr-3"></i></a>
+                <a><i class="fab fa-twitter pr-3"></i></a>
+                <a><i class="fas fa-envelope-open-text"></i></a>
+            </div>
         </section>
 
         <section id="about-me" class="hide">
