Added my portfolio picture and about to start the about me as the welcome section is about done.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
 
     <header class="row col-5 my-3 pt-3 pl-5">
-        <h1>
+        <h1 class="col-12">
             Taani Maama
         </h1>
-        <p class="lead">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span id="create">Create</span> }</p> 
+        <p class="lead col-12">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span id="create">Create</span> }</p> 
     </header>
 
-    <main class="row">
+    <main class="row col-12">
         <nav class="nav nav-tabs flex-column col-md-2 pl-2">
             <a class="nav-link text-white" href="#welcome">Home</a>
             <a class="nav-link text-white" href="#about-me">About Me</a>
@@ -39,8 +39,8 @@
             </div>
         </section>
 
-        <section id="about-me" class="hide">
-
+        <section id="about-me" class="hide col-md-10">
+            <img src="./assets/images/supremetee.jpg" alt="It's me!">
         </section>
 
         <section id="projects" class="hide">
