--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,25 +11,27 @@
 
     <title>Taani Maama</title>
 </head>
+
 <body>
 
     <header class="row col-5 my-3 pt-3 pl-5">
         <h1 class="col-12">
             Taani Maama
         </h1>
-        <p class="lead col-12">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span id="create">Create</span> }</p> 
+        <p class="lead col-12">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span
+                id="create">Create</span> }</p>
     </header>
 
     <main class="row col-12">
-        <nav class="nav nav-tabs flex-column col-md-2 pl-2">
+        <nav class="nav flex-column col-md-2 pl-2">
             <a class="nav-link text-white" href="#welcome">Home</a>
             <a class="nav-link text-white" href="#about-me">About Me</a>
             <a class="nav-link text-white" href="#projects">Portfolio</a>
-            <a class="nav-link text-white" href="#credentials">Credentials</a>
             <a class="nav-link text-white" href="#">Resume</a>
-          </nav>
+        </nav>
 
-        <section id="welcome" class="d-flex flex-column justify-content-center align-items-center text-center col-md-10">
+        <section id="welcome"
+            class="d-flex flex-column justify-content-center align-items-center text-center col-md-10">
             <h3>Welcome to my page!</h3>
             <p>Take your time and reach out to me at any of my socials.</p>
             <div class="d-flex flex-row justify-content-around p-0">
@@ -39,20 +42,63 @@
             </div>
         </section>
 
-        <section id="about-me" class="hide col-md-10">
-            <img src="./assets/images/supremetee.jpg" alt="It's me!">
+        <section id="about-me" class="hide col-md-10 d-flex flex-row">
+            <img id="profile-pic" class="col-6 rounded-circle" src="./assets/images/supremetee.jpg" alt="It's me!">
+            <div id="about-me-container" class="col-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt natus id veniam assumenda
+                    voluptates cupiditate, distinctio maxime expedita dolore quo, error sunt necessitatibus dolorum
+                    nostrum nisi eveniet rerum minus! Incidunt?</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quaerat nam atque consectetur
+                    magnam optio doloremque sint alias reiciendis modi et aliquid, quae exercitationem porro sequi vero?
+                    Nobis, cumque sequi.</p>
+            </div>
         </section>
 
-        <section id="projects" class="hide">
-
-        </section>
-
-        <section id="credentials" class="hide">
-
+        <section id="projects" class="hide col-md-10">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
         </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/script/script.js"></script>
 </body>
+
 </html>
