Changed the a tags to buttons for the nav bar.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header class="row col-5 my-3 pt-3 pl-5">
+    <header class="row col-md-5 my-3 pt-3 pl-5 rounded">
         <h1 class="col-12">
             Taani Maama
         </h1>
@@ -24,10 +24,10 @@
 
     <main class="row col-12">
         <nav class="nav flex-column col-md-2 pl-2">
-            <a class="nav-link text-white" href="#welcome">Home</a>
-            <a class="nav-link text-white" href="#about-me">About Me</a>
-            <a class="nav-link text-white" href="#projects">Portfolio</a>
-            <a class="nav-link text-white" href="#">Resume</a>
+            <button class="btn text-white" id="#homeBtn">Home</button>
+            <button class="btn text-white" id="#aboutMeBtn">About Me</button>
+            <button class="btn text-white" id="#projectsBtn">Portfolio</button>
+            <button class="btn text-white" id="resumeBtn">Resume</button>
         </nav>
 
         <section id="welcome"
@@ -45,13 +45,9 @@
         <section id="about-me" class="hide col-md-10 d-flex flex-row">
             <img id="profile-pic" class="col-6 rounded-circle" src="./assets/images/supremetee.jpg" alt="It's me!">
             <div id="about-me-container" class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt natus id veniam assumenda
-                    voluptates cupiditate, distinctio maxime expedita dolore quo, error sunt necessitatibus dolorum
-                    nostrum nisi eveniet rerum minus! Incidunt?</p>
+                <p>Taani Maama is a web developer, early in his career. While lacking in actual work experience he continues to grow at an exponential rate, learning new techniques and values every day that will help him in his pursuit to be an amazing developer. His background in project management, and lead teams in high stress environments in past careers has helped him build a solid foundation for his mindful yet competitive approach.</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quaerat nam atque consectetur
-                    magnam optio doloremque sint alias reiciendis modi et aliquid, quae exercitationem porro sequi vero?
-                    Nobis, cumque sequi.</p>
+                <p>Growth is a very important aspect of life to Taani as he always gives everything 110%. Part of his mindset that has allowed him make leaps and bounds in other fields are that he thinks limits are meant to be pushed. There are no ceilings when it comes to knowledge. He hopes to continue building upon these mental strategies to elevate him to his full potential.</p>
             </div>
         </section>
 
