Started my script and the click event function in which will handle the changing of the sections that are visible.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <main class="row col-12">
         <nav class="nav flex-column col-md-2 pl-2">
-            <button class="btn text-white" id="#homeBtn">Home</button>
-            <button class="btn text-white" id="#aboutMeBtn">About Me</button>
-            <button class="btn text-white" id="#projectsBtn">Portfolio</button>
+            <button class="btn text-white" id="#homeBtn" date-section='welcome'>Home</button>
+            <button class="btn text-white" id="#aboutMeBtn" data-section='about-me'>About Me</button>
+            <button class="btn text-white" id="#projectsBtn" data-section='projects'>Portfolio</button>
             <button class="btn text-white" id="resumeBtn">Resume</button>
         </nav>
 
