--- a/index.html
+++ b/index.html
@@ -2,99 +2,111 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./assets/style/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./assets/style/style.css">
 
-    <title>Taani Maama</title>
+  <title>Taani Maama</title>
 </head>
 
 <body>
 
-    <header class="row col-md-5 my-3 pt-3 pl-5 rounded">
-        <h1 class="col-12">
-            Taani Maama
-        </h1>
-        <p class="lead col-12">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span
-                id="create">Create</span> }</p>
-    </header>
+  <header class="row col-md-5 my-3 pt-3 pl-5 rounded">
+    <h1 class="col-12">
+      Taani Maama
+    </h1>
+    <p class="lead col-12">{ <span id="dream">Dream</span>, <span id="develop">Develop</span>, <span
+        id="create">Create</span> }</p>
+  </header>
 
-    <main class="row col-12">
-        <nav class="nav flex-column col-md-2 pl-2">
-            <button class="btn text-white" id="#homeBtn" date-section='welcome'>Home</button>
-            <button class="btn text-white" id="#aboutMeBtn" data-section='about-me'>About Me</button>
-            <button class="btn text-white" id="#projectsBtn" data-section='projects'>Portfolio</button>
-            <button class="btn text-white" id="resumeBtn">Resume</button>
-        </nav>
+  <main class="row col-12">
+    <nav class="nav flex-column col-md-2 pl-2">
+      <button class="btn text-white" id="homeBtn" data-section="home">Home</button>
+      <button class="btn text-white" id="#aboutMeBtn" data-section='about-me'>About Me</button>
+      <button class="btn text-white" id="#projectsBtn" data-section='projects'>Portfolio</button>
+      <button class="btn text-white" id="resumeBtn">Resume</button>
+    </nav>
 
-        <section id="welcome"
-            class="d-flex flex-column justify-content-center align-items-center text-center col-md-10">
-            <h3>Welcome to my page!</h3>
-            <p>Take your time and reach out to me at any of my socials.</p>
-            <div class="d-flex flex-row justify-content-around p-0">
-                <a><i class="fab fa-github pr-3"></i></a>
-                <a><i class="fab fa-facebook pr-3"></i></a>
-                <a><i class="fab fa-twitter pr-3"></i></a>
-                <a><i class="fas fa-envelope-open-text"></i></a>
+    <section id="home" class="d-flex flex-column justify-content-center align-items-center text-center col-md-10 hide">
+      <h3>Welcome to my page!</h3>
+      <p>Take your time and reach out to me at any of my socials.</p>
+      <div class="d-flex flex-row justify-content-around p-0">
+        <a><i class="fab fa-github pr-3"></i></a>
+        <a><i class="fab fa-facebook pr-3"></i></a>
+        <a><i class="fab fa-twitter pr-3"></i></a>
+        <a><i class="fas fa-envelope-open-text"></i></a>
+      </div>
+    </section>
+
+    <section id="about-me" class="hide col-md-10 d-flex flex-row">
+      <img id="profile-pic" class="col-6 rounded-circle" src="./assets/images/supremetee.jpg" alt="It's me!">
+      <div id="about-me-container" class="col-6">
+        <p>Taani Maama is a web developer, early in his career. While lacking in actual work experience he continues to
+          grow at an exponential rate, learning new techniques and values every day that will help him in his pursuit to
+          be an amazing developer. His background in project management, and leading teams in high stress environments
+          in
+          past careers has helped him build a solid foundation for his mindful yet competitive approach.</p>
+        <br>
+        <p>Growth is a very important aspect of life to Taani as he always gives everything 110%. Part of his mindset
+          that has allowed him make leaps and bounds in other fields are that he thinks limits are meant to be pushed.
+          There are no ceilings when it comes to knowledge. He hopes to continue building upon these mental strategies
+          to elevate him to his full potential.</p>
+      </div>
+    </section>
+
+    <section id="projects" class="hide col-md-10">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
             </div>
-        </section>
-
-        <section id="about-me" class="hide col-md-10 d-flex flex-row">
-            <img id="profile-pic" class="col-6 rounded-circle" src="./assets/images/supremetee.jpg" alt="It's me!">
-            <div id="about-me-container" class="col-6">
-                <p>Taani Maama is a web developer, early in his career. While lacking in actual work experience he continues to grow at an exponential rate, learning new techniques and values every day that will help him in his pursuit to be an amazing developer. His background in project management, and lead teams in high stress environments in past careers has helped him build a solid foundation for his mindful yet competitive approach.</p>
-                <br>
-                <p>Growth is a very important aspect of life to Taani as he always gives everything 110%. Part of his mindset that has allowed him make leaps and bounds in other fields are that he thinks limits are meant to be pushed. There are no ceilings when it comes to knowledge. He hopes to continue building upon these mental strategies to elevate him to his full potential.</p>
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-        </section>
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block w-100" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+  </main>
 
-        <section id="projects" class="hide col-md-10">
-            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                    </div>
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-        </section>
-    </main>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="./assets/script/script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script src="./assets/script/script.js"></script>
 </body>
 
 </html>
