--- a/index.html
+++ b/index.html
@@ -57,42 +57,58 @@
       </div>
     </section>
 
-    <section id="projects" class="hide col-md-10">
+    <section id="projects" class="hide col-md-8">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="" class="d-block w-100" alt="">
+          <a class="carousel-item active" href="https://github.com/TaaniBravo/Trail-Chaser-Hiking-App" target="_blank">
+            <img src="./assets/images/2020.11.20-17.28.png" class="d-block w-100" alt="Trail Chasers App">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>Trail Chasers Hike Finder App</h5>
+              <p>Find the perfect adventure for you with this custom search hike finder.</p>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="" class="d-block w-100" alt="">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </a>
+          <a class="carousel-item" href="https://github.com/TaaniBravo/06-Weather-Dashboard" target="_blank">
+            <img src="./assets/images/2020.11.20-17.33.png" class="d-block w-100" alt="Weather Dashboard">
+            <div class="carousel-caption d-none d-md-block text-body">
+              <h5>Weather Dashboard</h5>
+              <p>Look up the weather for any city with this fun and informative dashboard.</p>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="" class="d-block w-100" alt="">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </a>
+          <a class="carousel-item" href="https://github.com/TaaniBravo/03-Password-Generator" target="_blank">
+            <img src="./assets/images/2020.11.20-17.34.png" class="d-block w-100" alt="Password Generator">
+            <div class="carousel-caption d-none d-md-block text-body">
+              <h5>Password Generator</h5>
+              <p>Create a unique password based on custom criteria of characters, numbers, and symbols.</p>
             </div>
-          </div>
+          </a>
+          <a class="carousel-item" href="https://github.com/TaaniBravo/04-Legend-of-Zelda-Quiz" target="_blank">
+            <img src="./assets/images/2020.11.20-17.34_01.png" class="d-block w-100" alt="Legend of Zelda Quiz">
+            <div class="carousel-caption d-none d-md-block text-body">
+              <h5>Legend of Zelda Quiz</h5>
+              <p>Calling of Legend of Zelda fans! Test your knowledge with this fun quiz.</p>
+            </div>
+          </a>
+          <a class="carousel-item" href="https://github.com/TaaniBravo/05-Workday-Scheduler" target="_blank">
+            <img src="./assets/images/2020.11.20-17.34_02.png" class="d-block w-100" alt="Workday Scheduler">
+            <div class="carousel-caption d-none d-md-block text-body">
+              <h5>Workday Scheduler</h5>
+              <p>Plan your workday to optimize what you get done with this timekeeping workday scheduler.</p>
+            </div>
+          </a>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
