--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
   <link rel="stylesheet" href="./assets/style/style.css">
 
   <title>Taani Maama</title>
@@ -30,27 +31,31 @@
       <button class="btn text-white" id="resumeBtn">Resume</button>
     </nav>
 
-    <section id="home" class="d-flex flex-column justify-content-center align-items-center text-center col-md-10 hide">
+    <section id="home" class="d-flex flex-column justify-content-center align-items-center text-center col-md-10 text-white hide">
       <h3>Welcome to my page!</h3>
       <p>Take your time and reach out to me at any of my socials.</p>
       <div class="d-flex flex-row justify-content-around p-0">
-        <a><i class="fab fa-github pr-3"></i></a>
-        <a><i class="fab fa-facebook pr-3"></i></a>
-        <a><i class="fab fa-twitter pr-3"></i></a>
-        <a><i class="fas fa-envelope-open-text"></i></a>
+        <a href="https://github.com/TaaniBravo" target="_blank"><i class="fab fa-github pr-3 text-white"></i></a>
+        <a href="https://www.facebook.com/taanimaama" target="_blank"><i class="fab fa-facebook pr-3 text-white"></i></a>
+        <a href="" target="_blank"><i class="fab fa-linkedin pr-3 text-white"></i></a>
+        <a href="mailto:taanim@uw.edu" target="_blank"><i class="fas fa-envelope-open-text text-white"></i></a>
       </div>
     </section>
 
-    <section id="about-me" class="hide col-md-10 d-flex flex-row">
-      <img id="profile-pic" class="col-6 rounded-circle" src="./assets/images/supremetee.jpg" alt="It's me!">
-      <div id="about-me-container" class="col-6">
-        <p>Taani Maama is a web developer, early in his career. While lacking in actual work experience he continues to
+    <section id="about-me" class="hide col-md-10 d-flex flex-row flex-wrap">
+      <div id="img-container" class="col-lg-6 rounded">
+        <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded">
+      </div>
+      <div id="about-me-container" class="col-lg-6">
+        <p class="text-white">Taani Maama is a web developer, early in his career. While lacking in actual work
+          experience he continues to
           grow at an exponential rate, learning new techniques and values every day that will help him in his pursuit to
           be an amazing developer. His background in project management, and leading teams in high stress environments
           in
           past careers has helped him build a solid foundation for his mindful yet competitive approach.</p>
         <br>
-        <p>Growth is a very important aspect of life to Taani as he always gives everything 110%. Part of his mindset
+        <p class="text-white">Growth is a very important aspect of life to Taani as he always gives everything 110%.
+          Part of his mindset
           that has allowed him make leaps and bounds in other fields are that he thinks limits are meant to be pushed.
           There are no ceilings when it comes to knowledge. He hopes to continue building upon these mental strategies
           to elevate him to his full potential.</p>
@@ -58,7 +63,7 @@
     </section>
 
     <section id="projects" class="hide col-md-8">
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide m-3" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
