--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
       <button class="btn text-white" id="resumeBtn">Resume</button>
     </nav>
 
-    <section id="home" class="d-flex flex-column justify-content-center align-items-center text-center col-md-10 text-white hide">
+    <section id="home"
+      class="d-flex flex-column justify-content-center align-items-center text-center col-md-10 text-white" data-move-x='-200px'>
       <h3>Welcome to my page!</h3>
       <p>Take your time and reach out to me at any of my socials.</p>
       <div class="d-flex flex-row justify-content-around p-0">
         <a href="https://github.com/TaaniBravo" target="_blank"><i class="fab fa-github pr-3 text-white"></i></a>
-        <a href="https://www.facebook.com/taanimaama" target="_blank"><i class="fab fa-facebook pr-3 text-white"></i></a>
+        <a href="https://www.facebook.com/taanimaama" target="_blank"><i
+            class="fab fa-facebook pr-3 text-white"></i></a>
         <a href="" target="_blank"><i class="fab fa-linkedin pr-3 text-white"></i></a>
         <a href="mailto:taanim@uw.edu" target="_blank"><i class="fas fa-envelope-open-text text-white"></i></a>
       </div>
@@ -44,7 +46,7 @@
 
     <section id="about-me" class="hide col-md-10 d-flex flex-row flex-wrap">
       <div id="img-container" class="col-lg-6 rounded">
-        <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded">
+        <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded-circle">
       </div>
       <div id="about-me-container" class="col-lg-6">
         <p class="text-white">Taani Maama is a web developer, early in his career. While lacking in actual work
@@ -123,9 +125,6 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script src="./assets/script/script.js"></script>
 </body>
