Cleaned up the code mostly in my script. Then I made necessary tweaks so that the transitions were as smooth as possible.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </section>
 
     <section id="projects" class="hide col-md-8">
+      <h3 class="text-white text-center">Click to learn more about my projects!</h3>
       <div id="carouselExampleCaptions" class="carousel slide m-3" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
