Got everything dialed in so that the page is nicely centered and works smoothly on both desktop and mobile.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         id="create">Create</span> }</p>
   </header>
 
-  <main class="row col-12">
-    <nav class="nav flex-column  justify-content-center col-lg-2 pl-2">
+  <main class="row col-12 m-0 p-0">
+    <nav class="nav flex-column col-lg-2 p-0">
       <button class="btn text-white" id="homeBtn" data-section="home">Home</button>
       <button class="btn text-white" id="aboutMeBtn" data-section='about-me'>About Me</button>
       <button class="btn text-white" id="projectsBtn" data-section='projects'>Portfolio</button>
       <button class="btn text-white" id="resumeBtn">Resume</button>
       <button class="btn" id="homeIcon" data-section="home"><i class="fas fa-home text-white"></i></button>
-      <button class="btn" id="aboutMeIcon" data-section='about-me'><i class="fas fa-address-card text-white"></i></button>
-      <button class="btn" id="projectsIcon" data-section='projects'><i class="fas fa-project-diagram text-white"></i></button>
+      <button class="btn" id="aboutMeIcon" data-section='about-me'><i
+          class="fas fa-address-card text-white"></i></button>
+      <button class="btn" id="projectsIcon" data-section='projects'><i
+          class="fas fa-project-diagram text-white"></i></button>
       <button class="btn" id="resumeIcon"><i class="far fa-file text-white"></i></button>
     </nav>
 
@@ -40,15 +42,7 @@
       class="d-flex flex-column justify-content-center align-items-center text-center col-lg-10 text-white"
       data-move-x='-200px'>
       <h3>Welcome to my page!</h3>
-      <p>Take your time and reach out to me at any of my socials.</p>
-      <div class="d-flex flex-row justify-content-around p-0">
-        <a href="https://github.com/TaaniBravo" target="_blank"><i class="fab fa-github pr-3 text-white"></i></a>
-        <a href="https://www.facebook.com/taanimaama" target="_blank"><i
-            class="fab fa-facebook pr-3 text-white"></i></a>
-        <a href="https://www.linkedin.com/in/taani-maama-b86583157/" target="_blank"><i
-            class="fab fa-linkedin pr-3 text-white"></i></a>
-        <a href="mailto:taanim@uw.edu" target="_blank"><i class="fas fa-envelope-open-text text-white"></i></a>
-      </div>
+      <p>Take your time and reach out to me at any of my socials down below!</p>
     </section>
 
     <section id="about-me" class="hide col-lg-10 d-flex flex-row flex-wrap">
@@ -129,6 +123,16 @@
       </div>
     </section>
   </main>
+
+  <footer class="p-1">
+    <div class="d-flex flex-row justify-content-center p-1">
+      <a href="https://github.com/TaaniBravo" target="_blank"><i class="fab fa-github pr-3 text-white"></i></a>
+      <a href="https://www.facebook.com/taanimaama" target="_blank"><i class="fab fa-facebook pr-3 text-white"></i></a>
+      <a href="https://www.linkedin.com/in/taani-maama-b86583157/" target="_blank"><i
+          class="fab fa-linkedin pr-3 text-white"></i></a>
+      <a href="mailto:taanim@uw.edu" target="_blank"><i class="fas fa-envelope-open-text text-white"></i></a>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
