Added my resume to the file and then I also made some edits to the resume buttons so they allow for downloading the resume.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <button class="btn text-white" id="homeBtn" data-section="home">Home</button>
       <button class="btn text-white" id="aboutMeBtn" data-section='about-me'>About Me</button>
       <button class="btn text-white" id="projectsBtn" data-section='projects'>Portfolio</button>
-      <button class="btn text-white" id="resumeBtn">Resume</button>
+      <button class="btn" id="resumeBtn"><a class='text-white'href="./assets/Resume.docx" download>Resume</a></button>
       <button class="btn" id="homeIcon" data-section="home"><i class="fas fa-home text-white"></i></button>
       <button class="btn" id="aboutMeIcon" data-section='about-me'><i
           class="fas fa-address-card text-white"></i></button>
       <button class="btn" id="projectsIcon" data-section='projects'><i
           class="fas fa-project-diagram text-white"></i></button>
-      <button class="btn" id="resumeIcon"><i class="far fa-file text-white"></i></button>
+      <button class="btn" id="resumeIcon"><a href="./assets/Resume.docx"><i class="far fa-file text-white"></i></a></button>
     </nav>
 
     <section id="home"
@@ -46,7 +46,7 @@
     </section>
 
     <section id="about-me" class="hide col-lg-10 d-flex flex-row flex-wrap">
-      <div id="img-container" class="col-lg-6 rounded">
+      <div id="img-container" class="col-lg-4 rounded">
         <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded-circle">
       </div>
       <div id="about-me-container" class="col-lg-6">
