Fixed an issue where the first switch of the sections did not provide a smooth transition.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>Take your time and reach out to me at any of my socials down below!</p>
     </section>
 
-    <section id="about-me" class="hide col-lg-10 d-flex flex-row flex-wrap">
+    <section id="about-me" class="hide trans col-lg-10 d-flex flex-row flex-wrap">
       <div id="img-container" class="col-lg-4 rounded">
         <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded-circle">
       </div>
@@ -66,7 +66,7 @@
       </div>
     </section>
 
-    <section id="projects" class="hide col-lg-7">
+    <section id="projects" class="hide trans col-lg-7">
       <h3 class="text-white text-center">Click to learn more!</h3>
       <div id="carousel" class="carousel slide m-3" data-ride="carousel">
         <div class="carousel-inner">
