--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
-  <link rel="stylesheet" href="./assets/style/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <title>Taani Maama</title>
 </head>
@@ -40,8 +40,8 @@
     </nav>
 
     <section id="home"
-      class="d-flex flex-column justify-content-center align-items-center text-center col-lg-10 text-white"
-      data-move-x='-200px'>
+      class="d-flex flex-column justify-content-center align-items-center text-center col-lg-10 text-white">
+      <img src="./assets/images/web-development.png" alt="Codemaster" id="codemaster-img" class="col-md-4">
       <h3>Welcome to my page!</h3>
       <p>Take your time and reach out to me at any of my socials down below!</p>
     </section>
@@ -128,7 +128,7 @@
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/script/script.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
