Changed my bio to be first person.

--- a/public/index.html
+++ b/public/index.html
@@ -51,18 +51,15 @@
         <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded-circle">
       </div>
       <div id="about-me-container" class="col-lg-6">
-        <p class="text-white">Taani Maama is a web developer, early in his career. While lacking in actual work
-          experience he continues to
-          grow at an exponential rate, learning new techniques and values every day that will help him in his pursuit to
-          be an amazing developer. His background in project management, and leading teams in high stress environments
-          in
-          past careers has helped him build a solid foundation for his mindful yet competitive approach.</p>
+        <p class="text-white">Hey guys! I'm a web developer, early in my career. While lacking in actual web-development work
+          experience I continue to grow at an exponential rate, learning new techniques and values every day that will help me in the pursuit to
+          being an amazing full-stack developer. My background in dropshipping project management, and leading teams in high stress environments
+          in past careers has helped me build a solid foundation for my mindful yet competitive approach.</p>
         <br>
-        <p class="text-white">Growth is a very important aspect of life to Taani as he always gives everything 110%.
-          Part of his mindset
-          that has allowed him make leaps and bounds in other fields are that he thinks limits are meant to be pushed.
-          There are no ceilings when it comes to knowledge. He hopes to continue building upon these mental strategies
-          to elevate him to his full potential.</p>
+        <p class="text-white">Growth is a very important aspect of life for me and I always gives everything 110% no matter how little the subject may matter.
+          Part of my mindset that has allowed me to make leaps and bounds in other fields are that I think limits are meant to be pushed.
+          There are no ceilings when it comes to knowledge. I hope to continue building upon these mental strategies
+          to elevate me to my full potential.</p>
       </div>
     </section>
 
