--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
+  <link rel="icon" type="ico" href="./assets/images/favicon.ico">
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <title>Taani Maama</title>
@@ -51,13 +52,18 @@
         <img src="./assets/images/supremetee.jpg" alt="Taani" class="col-12 rounded-circle">
       </div>
       <div id="about-me-container" class="col-lg-6">
-        <p class="text-white">Hey guys! I'm a web developer, early in my career. While lacking in actual web-development work
-          experience I continue to grow at an exponential rate, learning new techniques and values every day that will help me in the pursuit to
-          being an amazing full-stack developer. My background in dropshipping project management, and leading teams in high stress environments
+        <p class="text-white">Hey guys! I'm a web developer, early in my career. While lacking in actual web-development
+          work
+          experience I continue to grow at an exponential rate, learning new techniques and values every day that will
+          help me in the pursuit to
+          being an amazing full-stack developer. My background in dropshipping project management, and leading teams in
+          high stress environments
           in past careers has helped me build a solid foundation for my mindful yet competitive approach.</p>
         <br>
-        <p class="text-white">Growth is a very important aspect of life for me and I always gives everything 110% no matter how little the subject may matter.
-          Part of my mindset that has allowed me to make leaps and bounds in other fields are that I think limits are meant to be pushed.
+        <p class="text-white">Growth is a very important aspect of life for me and I always gives everything 110% no
+          matter how little the subject may matter.
+          Part of my mindset that has allowed me to make leaps and bounds in other fields are that I think limits are
+          meant to be pushed.
           There are no ceilings when it comes to knowledge. I hope to continue building upon these mental strategies
           to elevate me to my full potential.</p>
       </div>
